upgrade log driver to logrus

--- a/scripts/api_runner.conf
+++ b/scripts/api_runner.conf
@@ -1,4 +1,4 @@
-root:              ./src/app/api/
+root:              ././api/
 tmp_path:          ./storage/tmp
 build_name:        api-runner-build
 build_log:         api-runner-build-errors.log
