--- a/scripts/admin_api_runner.conf
+++ b/scripts/admin_api_runner.conf
@@ -1,7 +1,7 @@
-root:              ././api/
+root:              ./admin/
 tmp_path:          ./storage/tmp
-build_name:        api-runner-build
-build_log:         api-runner-build-errors.log
+build_name:        admin-api-runner-build
+build_log:         admin-api-runner-build-errors.log
 valid_ext:         .go, .tpl, .tmpl, .html
 no_rebuild_ext:    .tpl, .tmpl, .html
 ignored:           assets, tmp
